Bug 40466 - Chart objects fail to get imported
Summary: Chart objects fail to get imported
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: x86 (IA32) Windows (All)
: medium major
Assignee: Kohei Yoshida
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks: 34431 mab3.5
  Show dependency treegraph
 
Reported: 2011-08-29 11:56 UTC by Regina Henschel
Modified: 2011-12-23 13:25 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
File contains a chart (40.62 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2011-08-29 11:56 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2011-08-29 11:56:14 UTC
Created attachment 50666 [details]
File contains a chart

Open the attached file with "master~2011-08-26_22.11.34_LibO-Dev_OOO350m1_Win_x86" It crashes during opening.
Comment 1 Regina Henschel 2011-08-29 12:04:31 UTC
It crashes too, if I remove the picture and/or the chart. The file has been created with Excel 2010.
Comment 2 Regina Henschel 2011-08-30 14:06:07 UTC
LO3.5 "daily" crashes too, when you try to save to xlsx format, both with filter "Excel 2010 XML" and "Office Open XML".
Comment 3 Kohei Yoshida 2011-08-31 14:15:35 UTC
Confirmed.  On Linux it doesn't crash, but no chart objects get imported, at all, from xlsx.
Comment 4 Kohei Yoshida 2011-08-31 14:18:42 UTC
Muthu, on master the chart import is totally broken.  Do you have any idea what's going on there?
Comment 5 Kohei Yoshida 2011-08-31 19:14:49 UTC
Well, at least I figured out the cause of the crash.  It's a mis-match of the number of namespaceIds and namespaceURIs in the namespaceIds struct (xmlfilterbase.cxx in oox).  I'll fix this shortly.

But still the chart object import problem is there...
Comment 7 Rainer Bielefeld Retired 2011-08-31 22:33:58 UTC
[Reproducible] with sample document and Server installation of Master "LibO-dev 3.5.0 – WIN7 Home Premium (64bit) English UI [(Build ID: a6adae1-4eb4f62-09af278)]", cash when Open document.

@Kohei:
Can we close this one as fixed?
Does the (Linux?) chart import problem still exist?
Can you please check whether the fix also fixes "Bug 40536 - FILESAVE as xlsx crashes"?
Comment 8 Kohei Yoshida 2011-08-31 22:40:38 UTC
Actually I'll take a look at this.
Comment 9 Kohei Yoshida 2011-08-31 22:43:44 UTC
@Rainer, yes the chart import problem still exists (I assume) on all platforms.
Comment 10 Kohei Yoshida 2011-09-01 23:07:39 UTC
Fixed it, after two days of agony.

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d178d7bef193565a7d6aacbc37a58dfc4bd7b316
Comment 11 Björn Michaelsen 2011-12-23 13:25:11 UTC
Since all new unconfirmed bugs start in state UNCONFIRMED now and old unconfirmed bugs were moved to NEEDINFO with a explanatory comment, all bugs promoted above those bug states to NEW and later are automatically confirmed making the CONFIRMED whiteboard status redundant. Thus it will be removed.