fdo#40466: Make sure we have the same numbers of URI's and Id's.

This caused an immediate crash when trying to import xlsx documents
with charts on Windows.  No idea why this didn't crash on Linux,
even valgrind's memcheck didn't pick it up.